# kung-fu-panda-protocols

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  go.mod  vcpkg.json
go/: http.pb.go
go/dumper/: http.pb.go
go/service/common/: common.pb.go  common_grpc.pb.go
go/service/kfpanda/: kfpanda.pb.go  kfpanda_grpc.pb.go
protos/dumper/: http.proto
protos/service/common/: common.proto
protos/service/kfpanda/: kfpanda.proto
